@@ -1,3 +1,4 @@
+* Sanitize RichtText fields content (issue9405)
 * Escape external string (issue9394)
 * Keep context in sessionStorage
 * Use existing context for get_preferences
